# JupyterMCP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/jupyter_mcp/: __init__.py  __main__.py  executor.py  kernel_manager.py  notebook_manager.py  remote_kernel_manager.py  server.py
src/jupyter_mcp/tools/: __init__.py  cells.py  execution.py  kernel.py  notebooks.py  remote.py
tests/: __init__.py  conftest.py  test_executor.py  test_kernel_manager.py  test_notebook_manager.py  test_tools.py
tests/jupyter_mcp/executor/: test_executor.py
tests/jupyter_mcp/kernel_manager/: test_kernel_manager.py
tests/jupyter_mcp/notebook_manager/: test_notebook_manager.py
tests/tools/: test_tools.py
