[project]
name = "jupyter-mcp"
version = "0.1.0"
description = "Jupyter Notebook MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.0",
    "jupyter-client>=8.6.0",
    "nbformat>=5.9.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
jupyter-mcp = "jupyter_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
