[project]
name = "mcp-jupyter-server"
version = "0.1.3"
description = "MCP server that gives AI agents full control over Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Try3D" }]
keywords = ["mcp", "jupyter", "notebook", "llm", "ai", "claude", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.1.0",
    "jupyter-client>=8.6.0",
    "nbformat>=5.9.0",
    "ipykernel>=6.0.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/Try3D/JupyterMCP"
Source = "https://github.com/Try3D/JupyterMCP"
Issues = "https://github.com/Try3D/JupyterMCP/issues"

[project.scripts]
jupyter-mcp = "jupyter_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
